--- a/index.html
+++ b/index.html
@@ -788,12 +788,43 @@ The final exam for this course is cumulative and open resource (open note, open 
 <h3>Unit 5: What are the open questions in neural codes?</h3>
 <div id="march-30-what-neural-representations-are-the-most-compact" class="section level4">
 <h4>March 30: What neural representations are the most compact?</h4>
+<p><strong>Goal:</strong> Be able to articulate how we can leverage the redundancy of the environment to create efficient neural codes.<br />
+<strong>Reading:</strong> * Read: Barlow (1961) <a href="http://www.cnbc.cmu.edu/~tai/microns_papers/Barlow-SensoryCommunication-1961.pdf">Possible Principles Underlying the Transformations of Sensory Messages</a><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Describe the “password hypothesis” put forth by Barlow. Describe one feature or entity that you would test as a possible “password” for human observers. (This second part cannot be found in the paper and is for your reflection).</li>
+<li>Study question 2: Barlow articulates the redundancy reduction hypothesis is “for a given class of input message, it will choose the code that requires the smallest average expenditure of impulses in the output. Or putting it briefly, it economizes impulses”. Imagine that sensory systems are using a Huffman-like code. In what way are energy expenditures being minimized?<br />
+</li>
+<li>Study question 3: Are the least redundant parts of a sensory message always the most important for our survival? Why or why not?<br />
+</li>
+<li>(Optional) What other questions do you have about this reading?</li>
+</ul>
 </div>
 <div id="april-1-should-the-brain-make-the-most-compact-code" class="section level4">
 <h4>April 1: Should the brain make the most compact code?</h4>
+<p><strong>Goal:</strong> Make an informed assessment about whether the goal of the neural code is to be maximally efficient.<br />
+<strong>Reading:</strong> Read: Barlow (2001) <a href="https://drive.google.com/file/d/1YOtnRld1q9Eh2CsVcHGCF03ySjjyZMqB/view?usp=sharing">Redundancy reduction revisited.</a> <em>Network: Computational Neural Systems</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question: Horace Barlow from 1961 gets in a time machine to visit Horace Barlow from 2001. What is one thing that they agree on? What is one thing they disagree on?<br />
+</li>
+<li>(Optional): What other questions do you have about this reading?</li>
+</ul>
 </div>
 <div id="april-4-what-is-the-goal-of-sensory-systems" class="section level4">
 <h4>April 4: What is the goal of sensory systems?</h4>
+<p><strong>Goal:</strong> Define the notion of a sparse code and compare it to compact codes.<br />
+<strong>Reading:</strong> * Read: Field (1994) <a href="https://drive.google.com/file/d/1jbHOiZG9L2PzZTmVrGjv6jixspTRVcSa/view?usp=sharing">What is the goal of sensory coding?</a>. Sections 1, 2, 5, and 6 required. Others optional, but recommended.<br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: What is the difference between a <em>compact</em> code and a <em>sparse</em> code?<br />
+</li>
+<li>Study question 2: Explain the concept of a state-space.<br />
+</li>
+<li>Study question 3: Be able to explain the transformation that takes place in Figure 2. In what way is the new representation more efficient?<br />
+</li>
+<li>(Optional) What other questions do you have about this reading?</li>
+</ul>
 </div>
 <div id="april-6-what-is-a-sparse-code" class="section level4">
 <h4>April 6: What is a sparse code?</h4>
@@ -801,8 +832,8 @@ The final exam for this course is cumulative and open resource (open note, open 
 <div id="april-8-does-the-brain-optimize-for-sparse-codes" class="section level4">
 <h4>April 8: Does the brain optimize for sparse codes?</h4>
 </div>
-<div id="april-11-does-the-neural-code-change-over-time" class="section level4">
-<h4>April 11: Does the neural code change over time?</h4>
+<div id="april-11-what-might-we-be-missing-in-the-neural-code" class="section level4">
+<h4>April 11: What might we be missing in the neural code?</h4>
 </div>
 <div id="april-13-does-the-neural-code-change-over-time" class="section level4">
 <h4>April 13: Does the neural code change over time?</h4>
