Add more readings

--- a/index.html
+++ b/index.html
@@ -811,8 +811,23 @@ The final exam for this course is cumulative and open resource (open note, open 
 <li>(Optional): What other questions do you have about this reading?</li>
 </ul>
 </div>
-<div id="april-4-what-is-the-goal-of-sensory-systems" class="section level4">
-<h4>April 4: What is the goal of sensory systems?</h4>
+<div id="april-4-are-there-silent-neurons" class="section level4">
+<h4>April 4: Are there silent neurons?</h4>
+<p><strong>Goal:</strong> Assess the extent to which we fully know sensory areas<br />
+<strong>Reading:</strong> Olshausen &amp; Field <a href="http://www.rctn.org/bruno/papers/V1-chapter.pdf">“What’s the other 85% of V1 doing?”</a> From <em>23 Problems in Systems Neuroscience</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study note: the article frequency references <em>Gabor functions</em> - these are the product of a <a href="https://en.wikipedia.org/wiki/Gabor_filter">sine wave and a Gaussian</a>.<br />
+</li>
+<li>Study question 1: Describe the biases that we face in neuron sampling? What causes these biases?<br />
+</li>
+<li>Study question 2: Describe the biases that we have from the stimuli that are shown to experimental subjects. What might be a way of ameliorating these issues?<br />
+</li>
+<li>Study question 3: Describe what is meant by a “classical receptive field”. Describe a result that challenges this notion.</li>
+</ul>
+</div>
+<div id="april-6-what-is-the-goal-of-sensory-systems" class="section level4">
+<h4>April 6: What is the goal of sensory systems?</h4>
 <p><strong>Goal:</strong> Define the notion of a sparse code and compare it to compact codes.<br />
 <strong>Reading:</strong> * Read: Field (1994) <a href="https://drive.google.com/file/d/1jbHOiZG9L2PzZTmVrGjv6jixspTRVcSa/view?usp=sharing">What is the goal of sensory coding?</a>. Sections 1, 2, 5, and 6 required. Others optional, but recommended.<br />
 <strong>Study questions:</strong></p>
@@ -826,14 +841,29 @@ The final exam for this course is cumulative and open resource (open note, open 
 <li>(Optional) What other questions do you have about this reading?</li>
 </ul>
 </div>
-<div id="april-6-what-is-a-sparse-code" class="section level4">
-<h4>April 6: What is a sparse code?</h4>
+<div id="april-8-what-is-a-sparse-code" class="section level4">
+<h4>April 8: What is a sparse code?</h4>
+<p><strong>Goal:</strong> Develop a working definition of a sparse codes and explain its benefits.<br />
+<strong>Reading:</strong> Olshausen &amp; Field (2004) <a href="http://www.cnbc.cmu.edu/~samondjm/papers/OlshausenandField2004.pdf">Sparse Coding of Sensory Inputs</a> <em>Current Opinion in Neurobiology</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: What is meant by the authors when they write about an “overcomplete” representation?<br />
+</li>
+<li>Study question 2: Explain the difference between ‘lifetime sparseness’ and ‘population sparseness’. Why is it the case that one does not necessarily imply the other?<br />
+</li>
+<li>(Optional) What other questions do you have about this reading?</li>
+</ul>
 </div>
-<div id="april-8-does-the-brain-optimize-for-sparse-codes" class="section level4">
-<h4>April 8: Does the brain optimize for sparse codes?</h4>
-</div>
-<div id="april-11-what-might-we-be-missing-in-the-neural-code" class="section level4">
-<h4>April 11: What might we be missing in the neural code?</h4>
+<div id="april-11-how-general-is-the-neural-code" class="section level4">
+<h4>April 11: How general is the neural code?</h4>
+<p><strong>Goal:</strong> Consider the extent to which the neural code is the same across sensory modality and species. <strong>Reading:</strong> McAlpine and Palmer <a href="https://drive.google.com/file/d/1SiYeQARZywJoL6ZucDKYBaDvlDh4q7MG/view?usp=sharing">How general are neural codes in sensory systems?</a> from <em>23 Problems in Systems Neuroscience</em> <strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Briefly describe the differences between barn owls and mammals for coding binaural sound information.<br />
+</li>
+<li>Study question 2: How do differences in an animal’s body give rise to differences in the neural code?<br />
+</li>
+<li>(Optional) What other questions do you have about this reading?</li>
+</ul>
 </div>
 <div id="april-13-does-the-neural-code-change-over-time" class="section level4">
 <h4>April 13: Does the neural code change over time?</h4>
